--- a/qa/index.css
+++ b/qa/index.css
@@ -274,7 +274,7 @@ body {
 }
 
 .c-initial {
-    letter-spacing: -20px;
+    letter-spacing: -10px;
 }
 
 .h-initial {
