--- a/travel-plans/index.css
+++ b/travel-plans/index.css
@@ -359,7 +359,7 @@ body {
 }
 
 .c-initial {
-    letter-spacing: -20px;
+    letter-spacing: -10px;
 }
 
 .h-initial {
